fixed bug with drop down menu alignment for smaller screens

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -4,7 +4,7 @@ body {
 }
 
 .main-content {
-  max-width: 600px !important;
+  max-width: 768px !important;
   margin-left: auto;
   margin-right: auto;
 }
